--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,6 @@ crashlytics-build.properties
 .idea/
 
 # Database
-/UserSaves/
-/GameSaves/GameData.db
-/GameSaves/GameData.db.meta
+UserSaves/
+GameSaves/GameData.db
+GameSaves/GameData.db.meta
