--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,7 @@ crashlytics-build.properties
 .idea/
 
 # Database
-UserSaves/
-GameSaves/GameData.db
-GameSaves/GameData.db.meta
+Assets/StreamingAssets/UserSaves/*.db
+Assets/StreamingAssets/UserSaves/*.db.meta
+Assets/StreamingAssets/GameSaves/GameData.db
+Assets/StreamingAssets/GameSaves/GameData.db.meta
